--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h2>Be A Part Of The Legacy</h2>
       <a href="#about" class="btn-get-started scrollto">Know More</a>
     </div>
-  </section><!-- End Hero -->
+  </section><!-- End Herooooo -->
 
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center ">
